# warehouse

./: .env  .env.template  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
src/: settings.py
src/app/: main.py
src/infra/db/alembic/: env.py
src/infra/db/alembic/versions/: 1a23d4065ee8_describe_your_migration.py  706b3fd7df7a_migration_message.py
src/infra/db/models/: common.py  order.py  product.py
src/infra/db/repo/: common.py  order.py  product.py
src/infra/di/: container.py
src/infra/di/providers/: repositories.py  services.py  sesssion.py
src/interfaces/: db.py  di.py
src/interfaces/repositories/alchemy/: order.py  product.py
src/presentation/controller/: order.py  product.py  register.py
src/presentation/exceptions/: handler.py  register.py
src/services/order/: dto.py  exceptions.py  services.py
src/services/product/: dto.py  exceptions.py  services.py
